# sphinx-mdinclude

./: .bump  .bumpversion.cfg  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  CHANGELOG.md  CHANGES.md  README.md  bandit.yaml  m2r.py  m2r2.py  makefile  noxfile.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.py
.github/: issue_template.md
.github/workflows/: bandit.yml  build.yml  deploy.yml  linter.yml  sphinx_building.yml  tests.yml
docs/: conf.py  example.md  index.md
sphinx_mdinclude/: __init__.py  __version__.py  legacy.py  parse.py  render.py  sphinx.py
sphinx_mdinclude/tests/: __init__.py  __main__.py  test.md  test.rst  test_cli.py  test_renderer.py  test_smoke.py
tests/: test.md  test.rst  test_cli.py  test_renderer.py
