[build-system]
requires = ["flit_core >=3.8,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sphinx_mdinclude"
authors = [
    {name = "Hiroyuki Takagi", email = "miyako.dev@gmail.com"},
    {name = "CrossNox", email = "ijmermet+m2r2@gmail.com"},
    {name = "Amethyst Reese", email = "amy@noswap.com"},
]
maintainers = [
    {name = "Amethyst Reese", email = "amy@noswap.com"},
]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Topic :: Text Processing",
]
keywords = ["Markdown", "reStructuredText", "sphinx-extension"]
dynamic = ["version", "description"]
requires-python = ">=3.8"
dependencies = [
    "mistune >=2.0,<3.0",
    "docutils >=0.16,<1.0",
    "pygments >= 2.8",
]

[project.optional-dependencies]
dev = [
    "docutils==0.19",
    "mistune==3.0.2",

    "attribution==1.6.2",
    "black==23.10.1",
    "coverage==7.3.2",
    "flake8==6.1.0",
    "flit==3.9.0",
    "mypy==1.6.1",
    "pessimist==0.9.3",
    "sphinx==5.1.1",
    "ufmt==2.3.0",
    "usort==1.0.7",
]

[project.urls]
Github = "https://github.com/omnilib/sphinx-mdinclude"


[tool.attribution]
name = "sphinx-mdinclude"
package = "sphinx_mdinclude"
signed_tags = true
version_file = true

[tool.coverage.run]
branch = true
include = ["sphinx_mdinclude/*"]
omit = ["sphinx_mdinclude/tests/*"]

[tool.coverage.report]
fail_under = 50
precision = 1
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.6"
# strict = true
ignore_missing_imports = true
