[build-system]
requires = ["flit_core >=3.8,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sphinx_mdinclude"
authors = [
    {name = "Hiroyuki Takagi", email = "miyako.dev@gmail.com"},
    {name = "CrossNox", email = "ijmermet+m2r2@gmail.com"},
    {name = "Amethyst Reese", email = "amy@noswap.com"},
]
maintainers = [
    {name = "Amethyst Reese", email = "amy@noswap.com"},
]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Topic :: Text Processing",
]
keywords = ["Markdown", "reStructuredText", "sphinx-extension"]
dynamic = ["version", "description"]
requires-python = ">=3.8"
dependencies = [
    "mistune >=3.0,<4.0",
    "docutils >=0.19,<1.0",
    "pygments >= 2.8",
    "sphinx >= 6",
]

[project.optional-dependencies]
dev = [
    "docutils==0.20.1; python_version < '3.9'",
    "docutils==0.21.2; python_version >= '3.9'",
    "mistune==3.0.2",

    "attribution==1.8.0",
    "black==24.4.2",
    "coverage==7.6.12",
    "flake8==7.0.0",
    "flit==3.9.0",
    "mypy==1.10.0",
    "sphinx==7.1.2; python_version < '3.9'",
    "sphinx==7.3.7; python_version >= '3.9'",
    "ufmt==2.5.1",
    "usort==1.0.8.post1",
]

[project.urls]
Github = "https://github.com/omnilib/sphinx-mdinclude"


[tool.attribution]
name = "sphinx-mdinclude"
package = "sphinx_mdinclude"
signed_tags = true
version_file = true
ignored_authors = ["dependabot"]

[tool.coverage.run]
branch = true
include = ["sphinx_mdinclude/*"]
omit = ["sphinx_mdinclude/tests/*"]

[tool.coverage.report]
fail_under = 50
precision = 1
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.8"
strict = true
ignore_missing_imports = true
disallow_untyped_calls = false
